Texture limit size not working #58392

Closed
opened 2018-12-01 03:34:48 +01:00 by Rombout Versluijs · 27 comments

OSX 10.11.6
Intel Iris 1536

Blender Version
Broken: 2.80.0 #26d5a3625ed
Worked: 2.79b
Changing texture limit in the preferences doesnt have any effect in the viewport.

Exact steps for others to reproduce the error
unwrap model and add material with image texture. Open settings > general > change texture limit enum has no effect.

OSX 10.11.6 Intel Iris 1536 **Blender Version** Broken: 2.80.0 #26d5a3625ed Worked: 2.79b Changing texture limit in the preferences doesnt have any effect in the viewport. **Exact steps for others to reproduce the error** unwrap model and add material with image texture. Open settings > general > change texture limit enum has no effect.

Added subscriber: @RomboutVersluijs

Added subscriber: @RomboutVersluijs

#61250 was marked as duplicate of this issue

#61250 was marked as duplicate of this issue
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-12-05 12:26:58 +01:00
Member

Can confirm.

@fclem: is this supposed to be supported?

Can confirm. @fclem: is this supposed to be supported?
Philipp Oeser changed title from Textture limit not working to Texture limit size not working 2018-12-05 12:27:23 +01:00

Did i add a wrong tag to this? I see BF Blender: 2.8 is removed. I cant recall if added tags here

Did i add a wrong tag to this? I see BF Blender: 2.8 is removed. I cant recall if added tags here

Added subscriber: @brecht

Added subscriber: @brecht

We moved all 2.8 bugs into the regular tracker, and so removed that tag.

We moved all 2.8 bugs into the regular tracker, and so removed that tag.

Okay clear now

Okay clear now

Removed subscriber: @RomboutVersluijs

Removed subscriber: @RomboutVersluijs

Added subscriber: @RomboutVersluijs

Added subscriber: @RomboutVersluijs

I want to bump this thread, still is present in 2.80, d844271aef, 2019-01-15, 19:24

I want to bump this thread, still is present in 2.80, d844271aef2d, 2019-01-15, 19:24

Im bumping this one, just checked build 2.80 #957v4547aeeb, 2019-01-18 22:11. Its still doing nothing

Im bumping this one, just checked build 2.80 #957v4547aeeb, 2019-01-18 22:11. Its still doing nothing
Member

Added subscribers: @andreymd87, @Lluc3D

Added subscribers: @andreymd87, @Lluc3D

Added subscriber: @you.le

Added subscriber: @you.le

I don't know if you (blender developers) want to restore this option for 2.8:

if yes, based on 2.79, this patch can be done:
p.diff

Else, "glreslimit" can be removed from userdef (DNA, RNA...)

I don't know if you (blender developers) want to restore this option for 2.8: if yes, based on 2.79, this patch can be done: [p.diff](https://archive.blender.org/developer/F6562239/p.diff) Else, "glreslimit" can be removed from userdef (DNA, RNA...)

(my patch is wrong because this should concern only GL_TEXTURE_2D targets and not cubemaps)

(my patch is wrong because this should concern only GL_TEXTURE_2D targets and not cubemaps)

I do think its good to still have this. Since 2.80 is way more hardware hungry i think this could lower that a bit. I see a major drop in the viewport response on my macbook pro 2015 using 2.80 where 2.79 runs smooth

I do think its good to still have this. Since 2.80 is way more hardware hungry i think this could lower that a bit. I see a major drop in the viewport response on my macbook pro 2015 using 2.80 where 2.79 runs smooth

This issue was referenced by 6c0bd89047

This issue was referenced by 6c0bd890475c7de2406c9383774ba8777724313f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I still dont see a difference with this build, edbf15d3c0, master, 2018-11-28, on osx 10.11.6

I still dont see a difference with this build, edbf15d3c044, master, 2018-11-28, on osx 10.11.6

@RomboutVersluijs this build is 4 months old. Try the latest one.

@RomboutVersluijs this build is 4 months old. Try the latest one.

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi

Sorry About Eevee render, I can not confirm preference viewport texture limit work with current 2.8 beta and Eevee
With Cycles I clear see, when I set texture limit from none to 2K it reduce scene usage memory.
but With Eevee render engine, I can not see any change about usage memory of same scene.
noworklimit.JPG

version: 2.80 (sub 59), branch: master, commit date: 2019-04-26 08:14, hash: 7440f98f98, type:
build date: 2019/04/26, 21:01

renderer: 'GeForce GTX 980 Ti/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 430.39'

Even though I save the scene with set Eevee render, then re-open it with keep preference setting, there seems no change about memory usage of the scene.

Eg with cycles, my scene memory change 3.94GB(no limits = include many 4K textures) to 1.35GB (limit as 1024) without use Render>simplify.

but with eevee my scene memory do not change. keep as 3.61G (bottom header) with use preference render limit as 1024

Is it problem only about wrong infomation of window bottom header?

Sorry About Eevee render, I can not confirm preference viewport texture limit work with current 2.8 beta and Eevee With Cycles I clear see, when I set texture limit from none to 2K it reduce scene usage memory. but With Eevee render engine, I can not see any change about usage memory of same scene. ![noworklimit.JPG](https://archive.blender.org/developer/F6989065/noworklimit.JPG) version: 2.80 (sub 59), branch: master, commit date: 2019-04-26 08:14, hash: 7440f98f980b, type: build date: 2019/04/26, 21:01 renderer: 'GeForce GTX 980 Ti/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 430.39' Even though I save the scene with set Eevee render, then re-open it with keep preference setting, there seems no change about memory usage of the scene. Eg with cycles, my scene memory change 3.94GB(no limits = include many 4K textures) to 1.35GB (limit as 1024) without use Render>simplify. but with eevee my scene memory do not change. keep as 3.61G (bottom header) with use preference render limit as 1024 Is it problem only about wrong infomation of window bottom header?

I think at current, with Cycles render, Property editor>Render>simplify>Texturel imits only do job.(reduce usage scene memory)
Do not think, User preference setting, Texture limit work . with current 2.8 beta.

I think at current, with Cycles render, Property editor>Render>simplify>Texturel imits only do job.(reduce usage scene memory) Do not think, User preference setting, Texture limit work . with current 2.8 beta.

The memory usage in the status bar is for CPU memory usage. The Viewport texture limit only affects GPU memory usage, which is not displayed there. It may be useful to have a texture limit that also reduces CPU memory usage, but this is not a bug.

The memory usage in the status bar is for CPU memory usage. The Viewport texture limit only affects GPU memory usage, which is not displayed there. It may be useful to have a texture limit that also reduces CPU memory usage, but this is not a bug.

Thanks Brecht explain how it work. I could understand.
I still not clear difference between Preference>texture limits and Simplify (cycles) texture limits, but it seems not matter of this report.

Thanks Brecht explain how it work. I could understand. I still not clear difference between Preference>texture limits and Simplify (cycles) texture limits, but it seems not matter of this report.

In #58392#646842, @fclem wrote:
@RomboutVersluijs this build is 4 months old. Try the latest one.

I see it working now. But my earlier post was quite a new build. My initial post was somewhat 4 months back.

PS indeed weird, perhaps i pasted an old code. Ive been updating a couple times a week or so

> In #58392#646842, @fclem wrote: > @RomboutVersluijs this build is 4 months old. Try the latest one. I see it working now. But my earlier post was quite a new build. My initial post was somewhat 4 months back. PS indeed weird, perhaps i pasted an old code. Ive been updating a couple times a week or so
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58392
No description provided.