Fix T58392 Texture limit size not working

It was removed by inadvertence.